src/np222kk/dv507/a2/test/cases/negative/test_eqoperator_02.ofp
void main() {
    bool b = 'c' == "c";
}